first new commit 12

--- a/index.html
+++ b/index.html
@@ -642,10 +642,13 @@
         <a-entity scale="0 0 0" rotation="0 -90 0" class="groups" id="Group-26" visible="false">
 
             <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
-                position="3.86385 -1.60569 2.40146" rotation="-81.38120634699673 -75.1663331432127 -9.548341655855168"
-                material="src: #Arrow-1; transparent:true"
+            position="3.13506 -1.60569 -0.16554" 
+            rotation="-81.38120634699673 -75.1663331432127 -9.548341655855168"                 material="src: #Arrow-1; transparent:true"
                 the_dote="Name_of_dote: Dote-25  ; Group_to_activate: Group-25 ; The_rotation: 0">
             </a-plane>
+
+       
+
             <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
                 position="-0.19151 -1.60569 -2.96196"
                 rotation="-86.71601637745984 47.95542153685964 -132.87693409996973"
@@ -862,13 +865,13 @@
         <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
         position="-2.66087 -1.1737 -0.13392"
         rotation="-69.64989549169313 116.66967694910414 164.45149227403917"         material="src: #Arrow-1; transparent:true"
-        the_dote="Name_of_dote: Dote-25; Group_to_activate: Group-25 ; The_rotation: 0">
+        the_dote="Name_of_dote: Dote-26; Group_to_activate: Group-26 ; The_rotation: 0">
         </a-plane>
 
         <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
         position="-0.32458 -1.1737 3.14067" rotation="-84.1463006662981 75.6292830416784 -152.59584957719215" 
         material="src: #Arrow-1; transparent:true"
-        the_dote="Name_of_dote: Dote-26; Group_to_activate: Group-26 ; The_rotation: 0">
+        the_dote="Name_of_dote: Dote-25; Group_to_activate: Group-25 ; The_rotation: 0">
     </a-plane>
     
 
