first new commit 13

--- a/index.html
+++ b/index.html
@@ -670,10 +670,11 @@
         <a-entity scale="0 0 0" rotation="0 -90 0" class="groups" id="Group-27" visible="false">
 
             <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
-                position="-0.80351 -1.60569 3.03232" rotation="-79.82161522865064 65.8053486863653 -141.09429479773598"
-                material="src: #Arrow-1; transparent:true"
+            position="-0.24547 -1.60569 3.03232" rotation="-79.82161522865064 65.8053486863653 -141.09429479773598"
+            material="src: #Arrow-1; transparent:true"
                 the_dote="Name_of_dote: Dote-26  ; Group_to_activate: Group-26 ; The_rotation: 0">
             </a-plane>
+
 
 
 
@@ -698,10 +699,13 @@
         <a-entity scale="0 0 0" rotation="0 -90 0" class="groups" id="Group-29" visible="false">
 
             <a-plane data-clickable scale='0.9 0.9 0.9' opacity='.5' class="pintings clickable"
-                position="0.57127 -1.1737 2.38936" rotation="-79.82161522865064 65.8053486863653 -141.09429479773598"
-                material="src: #Arrow-1; transparent:true"
-                the_dote="Name_of_dote: Dote-28  ; Group_to_activate: Group-28 ; The_rotation: 0">
-            </a-plane>
+            position="0.16484 -1.1737 2.68713" 
+            rotation="-79.82161522865064 65.8053486863653 -141.09429479773598"
+            material="src: #Arrow-1; transparent:true"
+            the_dote="Name_of_dote: Dote-28  ; Group_to_activate: Group-28 ; The_rotation: 0">
+        </a-plane>
+        
+ 
 
         </a-entity>
         <!-- Group-30 -->
